--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
     body {
       margin: 0;
     }
-    .large-text{
+
+    .large-text {
       padding-left: 20px;
       padding-top: 100px;
     }
@@ -45,8 +46,8 @@
       transition: all 0.25s ease-out;
       bottom: 0%;
       padding: 0%;
-     z-index: -1;
-     height: 120px;
+      z-index: -1;
+      height: 120px;
     }
 
 
@@ -68,24 +69,65 @@
       font-size: 30px;
       transition: all 0.25s ease-out;
     }
- 
+
 
     .shadows2:hover {
       text-shadow: -16px 6px 15px #ced0d3;
     }
-    @media screen and (max-width: 568px) {
-        .shadows1 {
-    font-size:50px;
-    }
-    .shadows1{
-      height: 60px;
-    }
-    .large-text{
-      padding-top: 600px;
-    }
- 
 
-}
+    @media screen and (max-width: 568px) {
+      .shadows1 {
+        font-size: 50px;
+      }
+
+      .shadows1 {
+        height: 60px;
+      }
+
+      .large-text {
+        padding-top: 600px;
+      }
+    }
+
+    .about-v {
+      display: flex;
+      height: 400px;
+      padding-top: 20px;
+    }
+
+    .yt {
+
+      width: 33.3%;
+    }
+
+    .chairman {
+
+      width: 33.3%;
+    }
+
+    .about-viit {
+
+      width: 33.3%;
+    }
+
+    .marq {
+      justify-content: center;
+      justify-items: center;
+      align-items: center;
+    }
+    .mar-text{
+      padding-top: 12px;
+      font-weight: 600;
+    }
+
+    .subtle-gray-gradient {
+      background: -webkit-linear-gradient(360deg, #dee1e1 10%, #f4f4f4 360%);
+      /* Chrome 10+, Saf5.1+ */
+      background: -moz-linear-gradient(360deg, #dee1e1 10%, #f4f4f4 360%);
+      /* FF3.6+ */
+      background: linear-gradient(360deg, #dee1e1 10%, #f4f4f4 360%);
+      /* W3C */
+    }
   </style>
 </head>
 
@@ -152,7 +194,7 @@
         <div class="shadows1">
           <span>v</span><span>i</span><span>g</span><span>n</span><span>a</span><span>n</span><span>'</span><span>s</span>
 
-          
+
         </div>
         <div class="shadows2">
           <span>i</span><span>n</span><span>s</span><span>t</span><span>i</span><span>t</span><span>u</span><span>t</span><span>e</span>
@@ -160,7 +202,7 @@
           <span>m</span><span>a</span><span>t</span><span>i</span><span>o</span><span>n</span><br>
           <span>t</span><span>e</span><span>c</span><span>h</span><span>n</span><span>o</span><span>l</span><span>o</span><span>g</span><span>y</span>
         </div>
-        
+
 
 
 
@@ -196,12 +238,47 @@
       </button>
     </div>
 
-
-
-
   </div>
 
+</div>
+<br>
+<div class="marq subtle-gray-gradient">
+  <div class="mar-text">
+    <marquee>
+      <p> WELCOME TO VIGNAN'S INSTITUTE OF INFORMATION TECHNOLOGY</p>
+    </marquee>
 
+  </div>
+</div>
+<br>
+
+
+<div class="about-v">
+  <div class="yt">
+    <h2>WELCOME TO VIIT</h2>
+    <figure><a href="#"><iframe allowfullscreen="" frameborder="0" height="315"
+          src="https://www.youtube.com/embed/sq8ISpdiaLc" width="400"></iframe></a>
+  </div>
+
+  <div class="about-viit">
+    <h2>ABOUT VIIT</h2>
+    <br>
+    <p>Vignan's Institute of Information Technology (VIIT) was established in 2002 in the City of Destiny,
+      Visakhapatnam, to cater to the educational needs of the general public. It acquired Autonomous status in the year
+      2017 and NBA and NAAC(A+) accredited Institute. The experience gained by Vignan through its earlier institutions
+      at Guntur has only helped in establishing very high quality standards right from the inception and also is one of
+      the reasons for the success.</p>
+  </div>
+  <div class="chairman">
+    <h2>CHAIRMAN'S MESSAGE</h2>
+    <figure>
+      <img alt="" src="http://vignaniit.edu.in/images/Chairman.jpg" style="width:100%" />
+      <p align="justify">Well Thought-out Reforms In Technical Education Is The Need Of The Hour&quot; We, in India
+        today, are living in a transitional era.<a class="nav-link" href="chairman.html" style="font-size:14px">Read
+          More</a></p>
+    </figure>
+
+  </div>
 </div>
 
 
