--- a/index.html
+++ b/index.html
@@ -86,7 +86,15 @@
 
       .large-text {
         padding-top: 600px;
+
       }
+
+      .about-v {
+        display: list-item;
+        height: auto;
+        background-color: aqua;
+      }
+
     }
 
     .about-v {
@@ -98,16 +106,19 @@
     .yt {
 
       width: 33.3%;
+      background-color: red;
     }
 
     .chairman {
 
       width: 33.3%;
+      background-color: aquamarine;
     }
 
     .about-viit {
 
       width: 33.3%;
+      background-color: yellowgreen;
     }
 
     .marq {
@@ -115,7 +126,8 @@
       justify-items: center;
       align-items: center;
     }
-    .mar-text{
+
+    .mar-text {
       padding-top: 12px;
       font-weight: 600;
     }
@@ -253,7 +265,7 @@
 <br>
 
 
-<div class="about-v">
+<!-- <div class="about-v">
   <div class="yt">
     <h2>WELCOME TO VIIT</h2>
     <figure><a href="#"><iframe allowfullscreen="" frameborder="0" height="315"
@@ -279,7 +291,62 @@
     </figure>
 
   </div>
+</div> -->
+<div class="row">
+  <div class="col-sm-4">
+    <div class="cs-section-title">
+      <div class="hd mt-3"><h2>Welcome to VIIT</h2></div>
+    </div>
+
+    <article>
+      <figure><a href="#"><iframe allowfullscreen="" frameborder="0" height="315"
+            src="https://www.youtube.com/embed/sq8ISpdiaLc" width="350"></iframe></a>
+      </figure>
+    </article>
+  </div>
+
+  <div class="col-sm-4">
+    <div class="cs-section-title">
+      <div class="hd mt-3"><h2>About VIIT</h2></div>
+    </div>
+    <article>
+      <p align="justify">Vignan's Institute of Information Technology (VIIT) was established in 2002 in the City of
+        Destiny, Visakhapatnam, to cater to the educational needs of the general public. It acquired Autonomous status
+        in the year 2017 and NBA and NAAC(A+) accredited Institute. The experience gained by Vignan through its earlier
+        institutions at Guntur has only helped in establishing very high quality standards right from the inception and
+        also is one of the reasons for the success.</p>
+
+    </article>
+  </div>
+
+  <div class="col-sm-4">
+    <div class="cs-section-title">
+      <div class="hd mt-3"><h2>Chairman's Message</h2></div>
+    </div>
+
+    <article>
+      <figure>
+        <img alt="" src="http://vignaniit.edu.in/images/Chairman.jpg" style="width:100%" />
+        <p align="justify">Well Thought-out Reforms In Technical Education Is The Need Of The Hour&quot; We, in India
+          today, are living in a transitional era.<a class="nav-link" href="chairman.html" style="font-size:14px">Read
+            More</a></p>
+      </figure>
+    </article>
+  </div>
 </div>
+
+<br>
+<footer class="bg-light text-center text-lg-start">
+  
+  <!-- Copyright -->
+  <b><div class="text-center p-3" style="background-color: rgb(201, 218, 231);">
+    © 2020 Copyright:
+    <a class="text-dark" href="http://vignaniit.edu.in/">VIIT</a>
+  </div></b>
+  <!-- Copyright -->
+</footer>
+
+
 
 
 
